change nav position

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </nav>
     <div class="content">
-        "Under Construction"
+        Under Construction
     </div>
 </body>
 </html>
