--- a/index.html
+++ b/index.html
@@ -3,20 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Art Portfolio</title>
+    <title>Tomás Planas</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#bio">Bio</a></li>
+            <li><a href="#work">Obras</a></li>
+            <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
-    <div class="content">
-        Under Construction
+
+    <!-- Home Section -->
+    <div class="home-section">
+        <img src="/img/firma.svg" alt="Tomás Planas firm" />
+    </div>
+
+    <!-- Bio section -->
+    <div id="bio" class="bio-section">
+        <h2>Sobre mí</h2>
+        <div class="bio-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies, elit id fringilla ullamcorper, risus tortor tincidunt neque, sit amet auctor tellus ligula quis augue. Donec blandit eget metus vel imperdiet. Mauris convallis venenatis turpis non finibus. Nunc sagittis, nisl nec sollicitudin commodo, ante nisl pellentesque libero, sed pulvinar nibh arcu eget sapien. Quisque sed finibus risus. Nullam accumsan dolor dui, ac facilisis quam blandit vel. Maecenas erat ipsum, condimentum ut nulla vitae, consectetur vestibulum eros. Nunc euismod eros ornare rutrum eleifend. Curabitur in placerat ex. <br> Morbi ex urna, accumsan vitae diam non, consectetur rutrum lorem. Phasellus ac ipsum et mi semper pretium. Pellentesque mauris ex, porta vel nisi ac, molestie pulvinar lacus. Vestibulum vitae tellus et nunc aliquam lobortis et vulputate ligula. Ut tincidunt facilisis imperdiet. In quam dolor, rhoncus eu augue vitae, maximus mattis quam. Integer sit amet porta nibh, convallis posuere ante. Sed lectus mi, hendrerit in pretium vel, feugiat eget lectus. <br> Proin in augue eu lectus auctor pretium. Aenean mattis, risus vel sodales volutpat, metus est dictum arcu, a tincidunt augue nisi vitae nulla. Ut semper tellus id odio imperdiet molestie. Sed sollicitudin placerat nibh. Proin porttitor erat nec imperdiet pharetra. Duis in maximus nisl. Nulla posuere tempus mauris ac volutpat. Nunc tincidunt sapien consectetur nunc malesuada egestas. Pellentesque quis elementum mauris. Sed ut metus varius, cursus magna nec, congue risus. Phasellus et neque aliquet, vestibulum metus quis, imperdiet lectus. In odio leo, rutrum non elementum sed, congue quis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
+            <img src="/img/perfil.svg" alt="Tomás Planas profile picture">
+        </div>
+    </div>
+
+    <!-- Work section -->
+    <div id="work" class="work-section">
+        <h2>Obras</h2>
+        <div class="work-content">
+            <div class="gallery">
+                <div class="gallery-item left">
+                    <img src="/img/2.svg" alt="Artwork 1">
+                    <p>Title of Artwork 1</p>
+                </div>
+                <div class="gallery-item center">
+                    <img src="/img/3.svg" alt="Artwork 2">
+                    <p>Title of Artwork 2</p>
+                </div>
+                <div class="gallery-item right">
+                    <img src="/img/4.svg" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
