--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tomás Planas</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -17,7 +20,7 @@
 
     <!-- Home Section -->
     <div class="home-section">
-        <img src="img/firma.svg" alt="Tomás Planas firm" />
+        <img src="img/firmatomas.svg" alt="Tomás Planas firm" />
     </div>
 
     <!-- Work section -->
@@ -25,16 +28,68 @@
         <!-- <h2>Obras</h2> -->
         <div class="work-content">
             <div class="gallery">
-                <div class="gallery-item left">
-                    <img src="img/2.svg" alt="Artwork 1">
+                <div class="gallery-item left vertical">
+                    <img src="img/ailu-vertical.png" alt="Artwork 1">
                     <p>Title of Artwork 1</p>
                 </div>
-                <div class="gallery-item center">
-                    <img src="img/3.svg" alt="Artwork 2">
+                <div class="gallery-item center vertical">
+                    <img src="img/analia-vertical.png" alt="Artwork 2">
                     <p>Title of Artwork 2</p>
                 </div>
                 <div class="gallery-item right vertical">
-                    <img src="img/vertical.png" alt="Artwork 3">
+                    <img src="img/asiatica-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item center">
+                    <img src="img/aye-horizontal.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item left vertical">
+                    <img src="img/aye2-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item right vertical">
+                    <img src="img/cara-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item center">
+                    <img src="img/juliana-horizontal.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item left vertical">
+                    <img src="img/lelia-rojo-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item right vertical">
+                    <img src="img/lelia-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item center vertical">
+                    <img src="img/lelia2-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item right vertical">
+                    <img src="img/lelia3-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item left vertical">
+                    <img src="img/ojo-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item center">
+                    <img src="img/pablito-horizontal.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item right vertical">
+                    <img src="img/pecas-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item left vertical">
+                    <img src="img/rolling-vertical.png" alt="Artwork 3">
+                    <p>Title of Artwork 3</p>
+                </div>
+                <div class="gallery-item right">
+                    <img src="img/santi-horizontal.png" alt="Artwork 3">
                     <p>Title of Artwork 3</p>
                 </div>
             </div>
