--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quantico:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#work">Obras</a></li>
-            <li><a href="#bio">Bio</a></li>
-            <li><a href="#contact">Contacto</a></li>
+            <li><a href="#work">obras</a></li>
+            <li><a href="#bio">bio</a></li>
+            <li><a href="#contact">contacto</a></li>
         </ul>
     </nav>
 
@@ -28,69 +28,65 @@
         <!-- <h2>Obras</h2> -->
         <div class="work-content">
             <div class="gallery">
+                <div class="gallery-item center vertical">
+                    <img src="img/asiatica-vertical.png" alt="Artwork 3">
+                    <p><span>Piáo</span>210 x 110 cm - Técnica mixta</p>
+                </div>
+                <div class="gallery-item right vertical">
+                    <img src="img/analia-vertical.png" alt="Artwork 2">
+                    <p><span>TheTrigger</span>60 x 60 cm - Óleo sobre lienzo</p>
+                </div>
                 <div class="gallery-item left vertical">
                     <img src="img/ailu-vertical.png" alt="Artwork 1">
-                    <p>Title of Artwork 1</p>
-                </div>
-                <div class="gallery-item center vertical">
-                    <img src="img/analia-vertical.png" alt="Artwork 2">
-                    <p>Title of Artwork 2</p>
-                </div>
-                <div class="gallery-item right vertical">
-                    <img src="img/asiatica-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
+                    <p><span>No hay drama en la satisfacción</span>46 x 65 cm - Óleo sobre lienzo</p>
                 </div>
                 <div class="gallery-item center">
-                    <img src="img/aye-horizontal.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
+                    <img src="img/apuntes.jpg" alt="Artwork 1">
+                    <p><span>Apuntes</span>18 x 13 cm - Óleo sobre papel</p>
+                </div>    
+                <div class="gallery-item left">
+                    <img src="img/viajedebodas.jpg" alt="Artwork 3">
+                    <p><span>Viaje de bodas II</span>46 x 65 cm - Óleo sobre lienzo</p>
                 </div>
-                <div class="gallery-item left vertical">
+                <div class="gallery-item right vertical">
                     <img src="img/aye2-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
-                </div>
-                <div class="gallery-item right vertical">
-                    <img src="img/cara-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
+                    <p><span>Dibujo 01</span>29 x 21 cm - Policromos sobre papel madera</p>
                 </div>
                 <div class="gallery-item center">
-                    <img src="img/juliana-horizontal.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
-                </div>
-                <div class="gallery-item left vertical">
-                    <img src="img/lelia-rojo-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
-                </div>
-                <div class="gallery-item right vertical">
-                    <img src="img/lelia-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
-                </div>
-                <div class="gallery-item center vertical">
-                    <img src="img/lelia2-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
-                </div>
-                <div class="gallery-item right vertical">
-                    <img src="img/lelia3-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
-                </div>
-                <div class="gallery-item left vertical">
-                    <img src="img/ojo-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
+                    <img src="img/aye2-vertical.png" alt="Artwork 3">
+                    <p><span>Tauro en piscis</span>146 x 114 cm - Óleo sobre lienzo</p>
                 </div>
                 <div class="gallery-item center">
+                    <img src="img/tauroenpiscis.jpg" alt="Artwork 3">
+                    <p><span>Tauro en piscis</span>146 x 114 cm - Óleo sobre lienzo</p>
+                </div>
+                <div class="gallery-item right">
                     <img src="img/pablito-horizontal.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
-                </div>
-                <div class="gallery-item right vertical">
-                    <img src="img/pecas-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
+                    <p><span>CRUDO</span>24 x 16 cm - Óleo sobre lienzo</p>
                 </div>
                 <div class="gallery-item left vertical">
                     <img src="img/rolling-vertical.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
+                    <p><span>Ephedra Sinica</span>41 x 33 cm / 24 x 16 cm - Óleo sobre lienzo</p>
                 </div>
-                <div class="gallery-item right">
-                    <img src="img/santi-horizontal.png" alt="Artwork 3">
-                    <p>Title of Artwork 3</p>
+                <div class="gallery-item right vertical">
+                    <img src="img/pecas-vertical.png" alt="Artwork 3">
+                    <p><span>Sin titulo</span>30 x 40 cm - Óleo sobre lienzo</p>
+                </div>
+                <div class="gallery-item center">
+                    <img src="img/prinsepunk.jpg" alt="Artwork 3">
+                    <p><span>Sin titulo / Prinsepunk</span>22 x 16 cm / 22 x 16 cm - Óleo sobre lienzo</p>
+                </div>
+                <div class="gallery-item left vertical">
+                    <img src="img/cara-vertical.png" alt="Artwork 3">
+                    <p><span>Sin titulo</span>60 x 50 cm - Óleo sobre lienzo</p>
+                </div>
+                <div class="gallery-item right vertical">
+                    <img src="img/cara-vertical.png" alt="Artwork 3">
+                    <p><span>Dibujo 02</span>29 x 21 cm - Policromos sobre papel madera</p>
+                </div>
+                <div class="gallery-item left vertical">
+                    <img src="img/cara-vertical.png" alt="Artwork 3">
+                    <p><span>Dibujo 03</span>29 x 21 cm - Policromos sobre papel madera</p>
                 </div>
             </div>
         </div>
