--- a/index.html
+++ b/index.html
@@ -29,64 +29,88 @@
         <div class="work-content">
             <div class="gallery">
                 <div class="gallery-item center vertical">
-                    <img src="img/asiatica-vertical.png" alt="Artwork 3">
-                    <p><span>Piáo</span>210 x 110 cm - Técnica mixta</p>
+                    <div>
+                        <img src="img/piao.jpg" alt="Artwork 3">
+                        <p><span>Piáo</span>210 x 110 cm - Técnica mixta</p>
+                    </div>
                 </div>
                 <div class="gallery-item right vertical">
-                    <img src="img/analia-vertical.png" alt="Artwork 2">
-                    <p><span>TheTrigger</span>60 x 60 cm - Óleo sobre lienzo</p>
+                    <div>
+                        <img src="img/thetrigger.png" alt="Artwork 2">
+                        <p><span>TheTrigger</span>60 x 60 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
                 <div class="gallery-item left vertical">
-                    <img src="img/ailu-vertical.png" alt="Artwork 1">
-                    <p><span>No hay drama en la satisfacción</span>46 x 65 cm - Óleo sobre lienzo</p>
+                    <div>
+                        <img src="img/nohaydrama.jpg" alt="Artwork 1">
+                        <p><span>No hay drama en la satisfacción</span>46 x 65 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
                 <div class="gallery-item center">
-                    <img src="img/apuntes.jpg" alt="Artwork 1">
-                    <p><span>Apuntes</span>18 x 13 cm - Óleo sobre papel</p>
+                    <div>
+                        <img src="img/apuntes.jpg" alt="Artwork 1">
+                        <p><span>Apuntes</span>18 x 13 cm - Óleo sobre papel</p>
+                    </div>
                 </div>    
                 <div class="gallery-item left">
-                    <img src="img/viajedebodas.jpg" alt="Artwork 3">
-                    <p><span>Viaje de bodas II</span>46 x 65 cm - Óleo sobre lienzo</p>
+                    <div>
+                       <img src="img/viajedebodas.jpg" alt="Artwork 3">
+                        <p><span>Viaje de bodas II</span>46 x 65 cm - Óleo sobre lienzo</p> 
+                    </div>
                 </div>
                 <div class="gallery-item right vertical">
-                    <img src="img/aye2-vertical.png" alt="Artwork 3">
-                    <p><span>Dibujo 01</span>29 x 21 cm - Policromos sobre papel madera</p>
+                    <div>
+                        <img src="img/dibujo01.jpg" alt="Artwork 3">
+                        <p><span>Dibujo 01</span>29 x 21 cm - Policromos sobre papel madera</p>
+                    </div>
                 </div>
                 <div class="gallery-item center">
-                    <img src="img/aye2-vertical.png" alt="Artwork 3">
-                    <p><span>Tauro en piscis</span>146 x 114 cm - Óleo sobre lienzo</p>
+                    <div>
+                        <img src="img/tauroenpiscis1.jpg" alt="Artwork 3">
+                        <p><span>Tauro en piscis</span>146 x 114 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
                 <div class="gallery-item center">
-                    <img src="img/tauroenpiscis.jpg" alt="Artwork 3">
-                    <p><span>Tauro en piscis</span>146 x 114 cm - Óleo sobre lienzo</p>
+                    <div>
+                        <img src="img/tauroenpiscis2.jpg" alt="Artwork 3">
+                        <p><span>Tauro en piscis</span>146 x 114 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
-                <div class="gallery-item right">
-                    <img src="img/pablito-horizontal.png" alt="Artwork 3">
-                    <p><span>CRUDO</span>24 x 16 cm - Óleo sobre lienzo</p>
-                </div>
-                <div class="gallery-item left vertical">
-                    <img src="img/rolling-vertical.png" alt="Artwork 3">
-                    <p><span>Ephedra Sinica</span>41 x 33 cm / 24 x 16 cm - Óleo sobre lienzo</p>
+                <div class="gallery-item center">
+                    <div>
+                        <img src="img/ephedra.png" alt="Artwork 3">
+                        <p><span>Ephedra Sinica / CRUDO</span>41 x 33 cm / 24 x 16 cm / 24 x 16 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
                 <div class="gallery-item right vertical">
-                    <img src="img/pecas-vertical.png" alt="Artwork 3">
-                    <p><span>Sin titulo</span>30 x 40 cm - Óleo sobre lienzo</p>
+                    <div>
+                        <img src="img/sintitulo.jpg" alt="Artwork 3">
+                        <p><span>Sin titulo</span>30 x 40 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
                 <div class="gallery-item center">
-                    <img src="img/prinsepunk.jpg" alt="Artwork 3">
-                    <p><span>Sin titulo / Prinsepunk</span>22 x 16 cm / 22 x 16 cm - Óleo sobre lienzo</p>
+                    <div>
+                        <img src="img/prinsepunk.jpg" alt="Artwork 3">
+                        <p><span>Sin titulo / Prinsepunk</span>22 x 16 cm / 22 x 16 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
                 <div class="gallery-item left vertical">
-                    <img src="img/cara-vertical.png" alt="Artwork 3">
-                    <p><span>Sin titulo</span>60 x 50 cm - Óleo sobre lienzo</p>
+                    <div>
+                        <img src="img/sintitulo2.jpg" alt="Artwork 3">
+                        <p><span>Sin titulo</span>60 x 50 cm - Óleo sobre lienzo</p>
+                    </div>
                 </div>
                 <div class="gallery-item right vertical">
-                    <img src="img/cara-vertical.png" alt="Artwork 3">
-                    <p><span>Dibujo 02</span>29 x 21 cm - Policromos sobre papel madera</p>
+                    <div>
+                        <img src="img/dibujo02.jpg" alt="Artwork 3">
+                        <p><span>Dibujo 02</span>29 x 21 cm - Policromos sobre papel madera</p>
+                    </div>
                 </div>
                 <div class="gallery-item left vertical">
-                    <img src="img/cara-vertical.png" alt="Artwork 3">
-                    <p><span>Dibujo 03</span>29 x 21 cm - Policromos sobre papel madera</p>
+                    <div>
+                        <img src="img/dibujo03.jpg" alt="Artwork 3">
+                        <p><span>Dibujo 03</span>29 x 21 cm - Policromos sobre papel madera</p>
+                    </div>
                 </div>
             </div>
         </div>
