--- a/exposicion.html
+++ b/exposicion.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Exposición</title>
+    <title>Fragmentos</title>
     <link rel="stylesheet" href="css/style-expo.css"> <!-- Archivo de CSS externo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class="container">
-        <h1>Exposición de Arte</h1>
-        <p>Bienvenidos a la galería de imágenes de nuestra más reciente exposición. Disfruta de una selección exclusiva de obras destacadas.</p>
+        <h1>fragmentos</h1>
+        <p>La percepción de la realidad se fragmenta en capas que desafían los límites de lo tangible.  La tecnología impone su orden y objetividad, convierte la figura en un mapa tridimensional.</p> 
+        <p>Este primer acto, un gesto tecnológico que despoja a la realidad de su espontaneidad, se convierte en el punto de partida de una transformación continua. Lo capturado no es más que una base, una representación que se somete a procesos de manipulación, fragmentación y reconstrucción.</p>
+        <p>Fragmentos_ busca reflexionar sobre lo que significa ser visto y cómo los medios tecnológicos, en su aparente precisión, distorsionan y reinventan lo que creemos conocer. <span>¿Qué ocurre cuando la mirada que captura lo real ya no es nuestra, sino la de una inteligencia que reorganiza lo observado?</span></p>
+        <p>En estas nuevas realidades, cada capa añade una distancia, pero también una posibilidad. Al final, lo que emerge es una realidad en continua mutación, una que no pertenece ni al mundo físico ni al digital, sino a un espacio intermedio, donde ambos convergen y se redefinen.</p>
 
         <div class="gallery">
-            <img src="img/2.svg" alt="Imagen 1">
-            <img src="img/3.svg" alt="Imagen 2">
-            <img src="img/vertical.png" alt="Imagen 3" css="vertical">
-            <img src="img/2.svg" alt="Imagen 4">
-            <img src="img/vertical.png" alt="Imagen 5" css="vertical">
-            <img src="img/3.svg" alt="Imagen 6">
+            <img class="vertical" src="img/nohaydrama.jpg" alt="Imagen 1">
+            <img class="vertical" src="img/thetrigger.png" alt="Imagen 2">
+            <img class="vertical" src="img/sintitulo.jpg" alt="Imagen 3" css="vertical">
+            <img src="img/tauroenpiscis1.jpg" alt="Imagen 4">
+            <img src="img/piao.jpg" alt="Imagen 5" css="vertical">
+            <img src="img/piao.jpg" alt="Imagen 6">
         </div>
     </div>
 
