--- a/index.html
+++ b/index.html
@@ -120,18 +120,18 @@
     <div id="bio" class="bio-section">
         <!-- <h2>Sobre mí</h2> -->
         <div class="bio-content">
-            <p> &nbsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies, elit id fringilla ullamcorper, risus tortor tincidunt neque, sit amet auctor tellus ligula quis augue. Donec blandit eget metus vel imperdiet. Mauris convallis venenatis turpis non finibus. Nunc sagittis, nisl nec sollicitudin commodo, ante nisl pellentesque libero, sed pulvinar nibh arcu eget sapien. Quisque sed finibus risus. Nullam accumsan dolor dui, ac facilisis quam blandit vel. <br> Maecenas erat ipsum, condimentum ut nulla vitae, consectetur vestibulum eros. Nunc euismod eros ornare rutrum eleifend. Curabitur in placerat ex. <br>  <span class="spacer"></span> &nbsp; Morbi ex urna, accumsan vitae diam non, consectetur rutrum lorem. Phasellus ac ipsum et mi semper pretium. Pellentesque mauris ex, porta vel nisi ac, molestie pulvinar lacus. Vestibulum vitae tellus et nunc aliquam lobortis et vulputate ligula. Ut tincidunt facilisis imperdiet. In quam dolor, rhoncus eu augue vitae, maximus mattis quam. Integer sit amet porta nibh, convallis posuere ante. Sed lectus mi, hendrerit in pretium vel, feugiat eget lectus. <br> Proin in augue eu lectus auctor pretium. <br>  <span class="spacer"></span> &nbsp; Aenean mattis, risus vel sodales volutpat, metus est dictum arcu, a tincidunt augue nisi vitae nulla. Ut semper tellus id odio imperdiet molestie. Sed sollicitudin placerat nibh. Proin porttitor erat nec imperdiet pharetra. Duis in maximus nisl. Nulla posuere tempus mauris ac volutpat. Nunc tincidunt sapien consectetur nunc malesuada egestas. Pellentesque quis elementum mauris. Sed ut metus varius, cursus magna nec, congue risus. Phasellus et neque aliquet, vestibulum metus quis, imperdiet lectus. In odio leo, rutrum non elementum sed, congue quis eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>
-            <img src="img/perfil.svg" alt="Tomás Planas profile picture">
+            <p> Artista autodidacta radicado en Madrid desde hace más de seis años, mi práctica artística está profundamente influenciada por una formación en ingeniería y tecnología. Desde una edad temprana estuve en contacto con el mundo del arte, explorando y experimentando en el taller de mi abuela, artista plástica que me introdujo al lenguaje visual y sensorial. Este cruce entre lo artístico y lo técnico ha sido una constante en mi carrera, donde lo digital y lo físico se entrelazan para desafiar y redefinir nuestra percepción del mundo contemporáneo.<br>En mi obra empleo herramientas digitales, escaneo 3D, fotografía analógica y otras tecnologías, me centro en la manipulación de la realidad y en cómo interactuamos con el entorno digital. Meticuloso de la técnica y una obsesión casi perfeccionista por el detalle, busco reflexionar sobre el papel de la tecnología como un agente transformador, no solo de la percepción, sino también de la experiencia humana. Un puente entre lo tangible y lo virtual, donde cada proyecto revela nuevas realidades que amplían la visión de cómo la tecnología nos redefine a nosotros y nuestra relación con el entorno.</p>
+            <img src="img/tomas.jpg" alt="Tomás Planas profile picture">
         </div>
     </div>
 
     <div id="contact" class="contact-section">
         <p>Get in touch with me:</p>
         <div>
-            <a href="mailto:your-email@example.com" target="_blank">
+            <a href="mailto:tomasaplanas@gmail.com" target="_blank">
                 <img src="img/email-outline.svg" alt="Email">
             </a>
-            <a href="https://www.instagram.com/yourprofile" target="_blank">
+            <a href="https://www.instagram.com/pleins/" target="_blank">
                 <img src="img/instagram.svg" alt="Instagram">
             </a>
         </div>
