--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
 
     <div id="contact" class="contact-section">
-        <p>Get in touch with me:</p>
+        <p>Contáctate conmigo:</p>
         <div>
             <a href="mailto:tomasaplanas@gmail.com" target="_blank">
                 <img src="img/email-outline.svg" alt="Email">
